--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<html>
-  <head>
-    <title>Luftimore's comment checker</title>
-  </head>
-  <body>
-    Content here.
-  </body>
-</html>
+<h1>Content here.</h1>
